@@ -213,20 +213,14 @@ int onWalk(const char *fpath, const struct stat *sb, int typeflag, struct FTW *f
     case FTW_D:
         // No reason to make this check if no directories have been excluded
         if (settings.excluded_directories){
-            // Find the last instance of '/' in fpath.
-            // We want to start at the character after that.
-            char *path = strrchr(fpath, '/');
-
-            if (path){
-                // If we found it, then we take the character after the slash
-                ++path;
-
-                for (DIR_LIST *tmp = settings.excluded_directories; tmp; tmp = tmp->next){
-                    if (strcmp(tmp->dir, path) == 0){
-                        return FTW_SKIP_SUBTREE;
-                    }
-                }
-            }
+	    // ftwbuf->base holds the start of this section of the path
+	    // This includes everything past the last slash.
+	    const char * const path = fpath + ftwbuf->base;
+	    for (DIR_LIST *tmp = settings.excluded_directories; tmp; tmp = tmp->next){
+		if (strcmp(tmp->dir, path) == 0){
+		    return FTW_SKIP_SUBTREE;
+		}
+	    }
         }
         return 0;
     case FTW_F:
